--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <table width="1000" border="0" cellspacing="0" cellpadding="0" align="center" >
+        <table width="1000" border="0" cellspacing="0" cellpadding="0" align="center" class="mainbox">
             <tr>
                 <!-- master table start -->
                 <td>
